# ComfyUI-Prompt-MZ

./: .gitignore  README.md  __init__.py  half_json.py  mz_gen_translate.py  mz_llama3.py  mz_llama_core_nodes.py  mz_llama_cpp.py  mz_llava.py  mz_openaiapi.py  mz_phi3.py  mz_prompt_utils.py  mz_prompt_webserver.py  mz_prompts.py  mz_qwen.py  mz_transformers.py  mz_utils.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
configs/: model_zoo.json
hook/: modeling_florence2.py
v1/: init.py  mz_deprecated.py  mz_llama3.py  mz_llava.py  mz_phi3.py
web/: prompt_mz.js
