[project]
name = "comfyui-prompt-mz"
description = "Use llama.cpp to help generate some nodes for prompt word related work"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/MinusZoneAI/ComfyUI-Prompt-MZ"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "wailovet"
DisplayName = "ComfyUI-Prompt-MZ"
Icon = ""
